--- a/ubuntuclean.yaml
+++ b/ubuntuclean.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: ubuntu
+  name: ubuntuclean
   labels:
-    app: ubuntu
+    app: ubuntuclean
 spec:
   containers:
   - image: ubuntu
     command:
       - "sleep"
-      - "30"
+      - "2592000"
     imagePullPolicy: IfNotPresent
     name: ubuntu
   restartPolicy: Always
