--- a/ubuntuts.yaml
+++ b/ubuntuts.yaml
@@ -9,6 +9,6 @@ spec:
   - image: ubuntu
     imagePullPolicy: IfNotPresent
     command: ["/bin/sh", "-c"]
-    args: ["sleep 2592000 & apt-get update & apt-get install -y telnet curl net-tools netcat vim tcpdump wget openssh-client traceroute git python3 python3-pip nmap arping screenfetch"]
+    args: ["sleep 10 & apt-get update & apt-get install -y telnet curl net-tools netcat vim tcpdump wget openssh-client traceroute git python3 python3-pip nmap arping screenfetch & sleep 2592000"]
     name: ubuntu
   restartPolicy: Always
