--- a/ubuntuts.yaml
+++ b/ubuntuts.yaml
@@ -11,6 +11,5 @@ spec:
     imagePullPolicy: IfNotPresent
     command: ["/bin/sh", "-c"]
     args: ["apt-get update && apt-get install -y telnet curl net-tools netcat vim tcpdump wget openssh-client traceroute git python3 python3-pip nmap arping screenfetch && sleep 2592000"]
-    command: ["/bin/sh", "-c"]
-    args: ["sleep 1000"]
+    command: ["sleep 10000"]
 restartPolicy: Always
