--- a/ubuntuts.yaml
+++ b/ubuntuts.yaml
@@ -10,5 +10,5 @@ spec:
     name: ubuntu
     imagePullPolicy: IfNotPresent
     command: ["/bin/sh", "-c"]
-    args: ["apt-get update && apt-get install -y telnet curl net-tools netcat vim tcpdump wget openssh-client traceroute git python3 python3-pip nmap arping screenfetch htop && sleep 2592000"]
-  restartPolicy: Always
+    args: ["apt-get update && apt-get install -y telnet curl net-tools netcat vim tcpdump wget openssh-client traceroute git python3 python3-pip nmap arping screenfetch htop"]
+    restartPolicy: Always
