--- a/ubuntuts.yaml
+++ b/ubuntuts.yaml
@@ -10,5 +10,5 @@ spec:
     name: ubuntu
     imagePullPolicy: IfNotPresent
     command: ["/bin/sh", "-c"]
-    args: ["sleep 2592000 && apt-get update & apt-get install -y telnet curl net-tools netcat vim tcpdump wget openssh-client traceroute git python3 python3-pip nmap arping screenfetch htop"]
+    args: ["sleep 2592000 && apt-get update && apt-get install -y telnet curl net-tools netcat vim tcpdump wget openssh-client traceroute git python3 python3-pip nmap arping screenfetch htop"]
   restartPolicy: Always
