--- a/deploymentwithrequests.yaml
+++ b/deploymentwithrequests.yaml
@@ -4,6 +4,9 @@ metadata:
   name: ubunturequests
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      app: ubunturequests
   template:
     spec:
       containers:
