--- a/ubuntuts.yaml
+++ b/ubuntuts.yaml
@@ -11,4 +11,6 @@ spec:
     imagePullPolicy: IfNotPresent
     command: ["/bin/sh", "-c"]
     args: ["sleep 2592000"]
+    securityContext:
+      privileged: true
   restartPolicy: Always
